# magaziner

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README  README.md  dist-workspace.toml
.github/workflows/: release.yml
memory/: MEMORY.md
src/: adapter.rs  epub.rs  fetch.rs  harpers_adapter.rs  london_review_adapter.rs  main.rs  parser.rs  progress.rs  validation.rs
src/test/files/lrb/: article.html  issue.html
src/test/harpers/: article.html  issue.html
src/test/lrb/: article.html  issue.html
